ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: proburese-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - proburese.cz
    secretName: proburese-tls
  rules:
  - host: proburese.cz
    http:
      paths:
      - path: /api(/|$)(.*)
        backend:
          serviceName: proburese-api
          servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: proburese-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - proburese.cz
    secretName: proburese-tls
  rules:
  - host: proburese.cz
    http:
      paths:
      - backend:
          serviceName: proburese-nuxt
          servicePort: 80
        path: /
